Update quicknote and todo list.

--- a/deploy/TODO
+++ b/deploy/TODO
@@ -6,16 +6,16 @@
 
 4. Automatic calc subnet via selected host net device.
 
-5. Reorder the file name/location. 
+[Done]5. Reorder the file name/location. 
    Split templete for installation/cluster configuration.
 
-6. Change the autoyast xml file more generic and simple.
+[Done]6. Change the autoyast xml file more generic and simple.
    Removing unnecessary packages and configurations from autoyast xml
 
-7. Configure a deploy cluster script.(move from jenkins)
+[Done]7. Configure a deploy cluster script.(move from jenkins)
 
 8. Result output tools.
 
 9. Commit the code of jekins job to ha-share
 
-10. [important] Move "cluster_conf" into working dir.
+[Done]10.Move "cluster_conf" into working dir.
