--- a/deploy/TODO
+++ b/deploy/TODO
@@ -14,13 +14,15 @@
 
 [Done]7. Configure a deploy cluster script. (move from jenkins)
 
-8. Result output tools.
+[Done]8. Result output tools.
    junit xml or cucumber result?
 
 9. Commit the code of jekins job to ha-share
 
 [Done]10.Move "cluster_conf" into working dir.
 
-11. Create log and informations into working dir.
+[Done]11. Create log and informations into working dir.
 
 12. Create lib to add vir/shared disk.
+
+13. Parameterized the jenkins task. Support input yaml file via command line.
