--- a/deploy/TODO
+++ b/deploy/TODO
@@ -31,3 +31,7 @@
     Enable/disable iscsi (sbd).
     Auto deploy or manually input.
     Manually field.(No need to change.)
+
+15. an option to reinstall OS, or just upgrade, an operation to autoremove vms if reinstall
+
+16. library to collect hb_report after running test-case
