--- a/deploy/scripts/drbd/TODO
+++ b/deploy/scripts/drbd/TODO
@@ -1,4 +1,4 @@
 1. "firstInitDRBD.sh"
-  Need to implement the monitor part of drbd9.
-2. Need to add more logs and polish the output in screen/log.
-3. Need to add test cases during establish DRBD and after.
+  Need to implement the monitor/all part of drbd9.
+2. Need to add test cases during establish DRBD and after.
+3. Create more scenario like more nodes.
