--- a/deploy/TODO
+++ b/deploy/TODO
@@ -23,7 +23,7 @@
 
 [Done]11. Create log and informations into working dir.
 
-!12!. Create lib to add vir/shared disk, iscsi device.
+[Done]12. Create lib to add vir/shared disk, iscsi device.
 
 13. Parameterized the jenkins task. Support input yaml file via command line.
 
