--- a/deploy/TODO
+++ b/deploy/TODO
@@ -24,6 +24,7 @@
 [Done]11. Create log and informations into working dir.
 
 [Done]12. Create lib to add vir/shared disk, iscsi device.
+So far we can add multiple iscsi device when deploying cluster
 
 13. Parameterized the jenkins task. Support input yaml file via command line.
 
@@ -34,7 +35,8 @@
 
 15. an option to reinstall OS, or just upgrade, an operation to autoremove vms if reinstall
 
-16. library to collect hb_report after running test-case
+[done]16. library to collect hb_report after running test-case
+Maybe We can use what pacemaker-cts did, added it to functions
 
 17. Using twopence instead of ssh only.
 
