--- a/deploy/TODO
+++ b/deploy/TODO
@@ -43,3 +43,5 @@ Maybe We can use what pacemaker-cts did, added it to functions
 18. Using salt to configure cluster?
 
 19. Considering CLOUD environment.
+
+20. Detect the host OS. Using virt-install instead of vm-install for SLE12 or later.
