--- a/deploy/TODO
+++ b/deploy/TODO
@@ -33,7 +33,7 @@ So far we can add multiple iscsi device when deploying cluster
     Auto deploy or manually input.
     Manually field.(No need to change.)
 
-15. an option to reinstall OS, or just upgrade, an operation to autoremove vms if reinstall
+[done]15. an option to reinstall OS, or just upgrade, an operation to autoremove vms if reinstall
 
 [done]16. library to collect hb_report after running test-case
 Maybe We can use what pacemaker-cts did, added it to functions
@@ -45,3 +45,5 @@ Maybe We can use what pacemaker-cts did, added it to functions
 19. Considering CLOUD environment.
 
 20. Detect the host OS. Using virt-install instead of vm-install for SLE12 or later.
+
+21. Reconstruct the directory structure, as the deploy directory is in disorder so far
