Change autoyast disk from virtio to scsi.
Since the current addVirtdisk is using virtio disk. (vdx)
So use autoyast disk as scsi disk(sdx) to avoid conflict.

Currently, DRBD and ocfs use virtio, but cluster-md use scsi...
So network methods(nfs/http/ftp) will be better.

--- a/deploy/TODO
+++ b/deploy/TODO
@@ -55,3 +55,7 @@ By default, we use sbd
 [Done]23. add timeout and exception handler for vm installation
 For the timeout expiration and exception during vm installation, this program will clean all vms,
 and exit with -1
+
+24. Support http/nfs/ftp as autoyast disk for virt-install
+
+25. Use autoyast disk with virtio(vdx), use addVirtDisk with scsi(sdx)
